Se agrego la funcionalidad de poder tener un registro de usuario en la pagina web por medio del LocalStorage, se actualizaron los headers para el menu del usuario

--- a/pages/login.html
+++ b/pages/login.html
@@ -17,6 +17,7 @@
   </head>
   <body>
     <main class="container-login">
+      <div id="toast-container" class="hidden toast-login"></div>
       <div class="login__card">
         <div class="login__image">
           <img src="../assets/images/logo.png" alt="Logo" class="login__img" />
