Se arreglo la redirección del cierre de sesión

--- a/pages/product-single.html
+++ b/pages/product-single.html
@@ -240,7 +240,7 @@
                 >
               </li>
               <hr />
-              <li>
+              <li class="btn-close-session">
                 <a href="#">
                   <svg
                     xmlns="http://www.w3.org/2000/svg"
