Se agrego la pagina de profile.html

--- a/pages/payment.html
+++ b/pages/payment.html
@@ -233,7 +233,7 @@
                       stroke-linecap="round"
                     />
                   </svg>
-                  Perfil</a
+                  Configuración</a
                 >
               </li>
               <hr />
