--- a/index.html
+++ b/index.html
@@ -155,7 +155,7 @@
             </a>
             <ul class="submenu-perfil">
               <li>
-                <a href="#">
+                <a href="pages/profile.html">
                   <svg
                     xmlns="http://www.w3.org/2000/svg"
                     viewBox="0 0 24 24"
@@ -236,7 +236,7 @@
                       stroke-linecap="round"
                     />
                   </svg>
-                  Perfil</a
+                  Configuración</a
                 >
               </li>
               <hr />
