--- a/pages/product-single.html
+++ b/pages/product-single.html
@@ -236,7 +236,7 @@
                       stroke-linecap="round"
                     />
                   </svg>
-                  Perfil</a
+                  Configuración</a
                 >
               </li>
               <hr />
